# ft_irc

./: .gitignore  CMakeLists.txt  Commands.txt  Personal_notes_Victor.txt  client.cpp  irc.cpp  irc.h
class_definitions/: Server.cpp
classes/: Client.hpp  Server.hpp
srcs/: irc.h
srcs/channel/: Channel.cpp  Channel.hpp  ChannelInvite.cpp  ChannelModes.cpp  ChannelMsg.cpp  ChannelUtils.cpp
srcs/client/: Client.hpp  client.cpp  client.hpp  main.cpp  socket_client.cpp  test_client.cpp
srcs/commands/: Invite.cpp  Kick.cpp  Mode.cpp  Nick.cpp  Part.cpp  ServerJoin.cpp  Topic.cpp  commandHandler.cpp  privateMsg.cpp
srcs/mock/: main.cpp  mock_Server.cpp  mock_server.hpp
srcs/server/: .nfs000000000d7f032700000016  .nfs000000000d7f033000000015  Server.cpp  Server.hpp  ServerClientConnection.cpp  ServerIp.cpp  ServerMsg.cpp  ServerSetup.cpp  Server_Quinten.cpp  main.cpp  server.cpp  server.hpp  socket_server.cpp
